<resources>
    <string name="app_name">Koneistajan Laskuri</string>
    <string-array name="numOfTeeths">
        <item>100/160</item>
        <item>250/500</item>
        <item>700</item>
        <item>1000/1600</item>
        <item>2500/3500</item>
    </string-array>
    <string name="rpm_button">Pyörimisnopeus</string>
    <string name="hdim_button">H-mitta</string>
    <string name="ratio_button">Välitys</string>
    <string name="calc_button">Laske</string>
    <string name="hole_diameter">Reiän halkaisija</string>
    <string name="drill_diameter">Poran halkaisija</string>
    <string name="num_of_teeth">Aurinkopyörän hampaat</string>
    <string name="keyway_field">Kiilauran leveys</string>
    <string name="version_display" translatable="false">v%1$s</string>
    <string name="rpm_total" translatable="false">%1$s rpm</string>
    <string name="ratio_total" translatable="false">i = %1$s</string>
    <string name="error">Virhe</string>
    <string name="hdim_total" translatable="false">%1$s mm</string>
    <string name="logo">Logo</string>
</resources>
